--- a/P2/Kaggle-csv.ipynb
+++ b/P2/Kaggle-csv.ipynb
@@ -2,13 +2,394 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6ad8fcbf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e7b3689b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>meta_score</th>\n",
+       "      <th>user_review</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Legend of Zelda: Ocarina of Time</td>\n",
+       "      <td>Nintendo 64</td>\n",
+       "      <td>November 23, 1998</td>\n",
+       "      <td>As a young boy, Link is tricked by Ganondorf, ...</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tony Hawk's Pro Skater 2</td>\n",
+       "      <td>PlayStation</td>\n",
+       "      <td>September 20, 2000</td>\n",
+       "      <td>As most major publishers' development efforts ...</td>\n",
+       "      <td>98</td>\n",
+       "      <td>7.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Grand Theft Auto IV</td>\n",
+       "      <td>PlayStation 3</td>\n",
+       "      <td>April 29, 2008</td>\n",
+       "      <td>[Metacritic's 2008 PS3 Game of the Year; Also ...</td>\n",
+       "      <td>98</td>\n",
+       "      <td>7.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SoulCalibur</td>\n",
+       "      <td>Dreamcast</td>\n",
+       "      <td>September 8, 1999</td>\n",
+       "      <td>This is a tale of souls and swords, transcendi...</td>\n",
+       "      <td>98</td>\n",
+       "      <td>8.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Grand Theft Auto IV</td>\n",
+       "      <td>Xbox 360</td>\n",
+       "      <td>April 29, 2008</td>\n",
+       "      <td>[Metacritic's 2008 Xbox 360 Game of the Year; ...</td>\n",
+       "      <td>98</td>\n",
+       "      <td>7.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   name        platform        release_date  \\\n",
+       "0  The Legend of Zelda: Ocarina of Time     Nintendo 64   November 23, 1998   \n",
+       "1              Tony Hawk's Pro Skater 2     PlayStation  September 20, 2000   \n",
+       "2                   Grand Theft Auto IV   PlayStation 3      April 29, 2008   \n",
+       "3                           SoulCalibur       Dreamcast   September 8, 1999   \n",
+       "4                   Grand Theft Auto IV        Xbox 360      April 29, 2008   \n",
+       "\n",
+       "                                             summary  meta_score user_review  \n",
+       "0  As a young boy, Link is tricked by Ganondorf, ...          99         9.1  \n",
+       "1  As most major publishers' development efforts ...          98         7.4  \n",
+       "2  [Metacritic's 2008 PS3 Game of the Year; Also ...          98         7.7  \n",
+       "3  This is a tale of souls and swords, transcendi...          98         8.4  \n",
+       "4  [Metacritic's 2008 Xbox 360 Game of the Year; ...          98         7.9  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_path = \"../P2/all_games.csv\"\n",
+    "kaggle_df = pd.read_csv(csv_path, encoding=\"utf-8\")\n",
+    "kaggle_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "631ece34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 18800 entries, 0 to 18799\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   name          18800 non-null  object\n",
+      " 1   platform      18800 non-null  object\n",
+      " 2   release_date  18800 non-null  object\n",
+      " 3   summary       18686 non-null  object\n",
+      " 4   meta_score    18800 non-null  int64 \n",
+      " 5   user_review   18800 non-null  object\n",
+      "dtypes: int64(1), object(5)\n",
+      "memory usage: 881.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "kaggle_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f21e9741",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 12254 entries, 0 to 12253\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   index         12254 non-null  int64 \n",
+      " 1   name          12254 non-null  object\n",
+      " 2   platform      12254 non-null  object\n",
+      " 3   release_date  12254 non-null  object\n",
+      " 4   summary       12153 non-null  object\n",
+      " 5   meta_score    12254 non-null  int64 \n",
+      " 6   user_review   12254 non-null  object\n",
+      "dtypes: int64(2), object(5)\n",
+      "memory usage: 670.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = kaggle_df.drop_duplicates(subset=[\"name\"]).reset_index()\n",
+    "df2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "00abdcd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.to_csv(\"kaggle_games_clean\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3b55197e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Platform</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>NA_Sales</th>\n",
+       "      <th>EU_Sales</th>\n",
+       "      <th>JP_Sales</th>\n",
+       "      <th>Other_Sales</th>\n",
+       "      <th>Global_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Wii Sports</td>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>41.49</td>\n",
+       "      <td>29.02</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>8.46</td>\n",
+       "      <td>82.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Super Mario Bros.</td>\n",
+       "      <td>NES</td>\n",
+       "      <td>1985.0</td>\n",
+       "      <td>Platform</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>29.08</td>\n",
+       "      <td>3.58</td>\n",
+       "      <td>6.81</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>40.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Mario Kart Wii</td>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>Racing</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>15.85</td>\n",
+       "      <td>12.88</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>35.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Wii Sports Resort</td>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>15.75</td>\n",
+       "      <td>11.01</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>2.96</td>\n",
+       "      <td>33.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Pokemon Red/Pokemon Blue</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>1996.0</td>\n",
+       "      <td>Role-Playing</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>11.27</td>\n",
+       "      <td>8.89</td>\n",
+       "      <td>10.22</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>31.37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rank                      Name Platform    Year         Genre Publisher  \\\n",
+       "0     1                Wii Sports      Wii  2006.0        Sports  Nintendo   \n",
+       "1     2         Super Mario Bros.      NES  1985.0      Platform  Nintendo   \n",
+       "2     3            Mario Kart Wii      Wii  2008.0        Racing  Nintendo   \n",
+       "3     4         Wii Sports Resort      Wii  2009.0        Sports  Nintendo   \n",
+       "4     5  Pokemon Red/Pokemon Blue       GB  1996.0  Role-Playing  Nintendo   \n",
+       "\n",
+       "   NA_Sales  EU_Sales  JP_Sales  Other_Sales  Global_Sales  \n",
+       "0     41.49     29.02      3.77         8.46         82.74  \n",
+       "1     29.08      3.58      6.81         0.77         40.24  \n",
+       "2     15.85     12.88      3.79         3.31         35.82  \n",
+       "3     15.75     11.01      3.28         2.96         33.00  \n",
+       "4     11.27      8.89     10.22         1.00         31.37  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_path = \"../P2/vgsales_kaggle.csv\"\n",
+    "kaggle_df2 = pd.read_csv(csv_path, encoding=\"utf-8\")\n",
+    "kaggle_df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c54645ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11493 entries, 0 to 11492\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   index         11493 non-null  int64  \n",
+      " 1   Rank          11493 non-null  int64  \n",
+      " 2   Name          11493 non-null  object \n",
+      " 3   Platform      11493 non-null  object \n",
+      " 4   Year          11328 non-null  float64\n",
+      " 5   Genre         11493 non-null  object \n",
+      " 6   Publisher     11442 non-null  object \n",
+      " 7   NA_Sales      11493 non-null  float64\n",
+      " 8   EU_Sales      11493 non-null  float64\n",
+      " 9   JP_Sales      11493 non-null  float64\n",
+      " 10  Other_Sales   11493 non-null  float64\n",
+      " 11  Global_Sales  11493 non-null  float64\n",
+      "dtypes: float64(6), int64(2), object(4)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3 = kaggle_df2.drop_duplicates(subset=[\"Name\"]).reset_index()\n",
+    "df3.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "54989a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.to_csv(\"kaggle_scores_clean\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef46ff34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
