--- a/P2/proj2_VGsales.ipynb
+++ b/P2/proj2_VGsales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "c78ffda8",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "44b04fed",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "'<!DOCTYPE html>\\n<html class=\"client-nojs\" lang=\"en\" dir=\"ltr\">\\n<head>\\n<meta charset=\"UTF-8\"/>\\n<title>List of best-selling video games | Video Game Sales Wiki | Fandom</title>\\n<script>document.documentElement.className = document.documentElement.className.replace( /(^|\\\\s)client-nojs(\\\\s|$)/, \"$1client-js$2\" );</script>\\n<script>(window.RLQ=window.RLQ||[]).push(function(){mw.config.set({\"wgCanonicalNamespace\":\"\",\"wgCanonicalSpecialPageName\":false,\"wgNamespaceNumber\":0,\"wgPageName\":\"List_of_best-selling_video_games\",\"wgTitle\":\"List of best-selling video games\",\"wgCurRevisionId\":23987,\"wgRevisionId\":23987,\"wgArticleId\":2171,\"wgIsArticle\":true,\"wgIsRedirect\":false,\"wgAction\":\"view\",\"wgUserName\":null,\"wgUserGroups\":[\"*\"],\"wgCategories\":[\"Pages with reference errors\",\"Pages containing cite templates with deprecated parameters\",\"Best selling games\",\"Video games\",\"Lists\"],\"wgBreakFrames\":false,\"wgPageContentLanguage\":\"en\",\"wgPageContentModel\":\"wikitext\",\"wgSeparatorTransformTable\":[\"\",\"\"],\"wgDigi'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "2584a249",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "cfe11dd3",
    "metadata": {},
    "outputs": [
@@ -2438,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "731cdb5f",
    "metadata": {},
    "outputs": [
@@ -2460,7 +2460,7 @@
        "</td></tr>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2473,7 +2473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "d95a2ce6",
    "metadata": {},
    "outputs": [
@@ -2483,7 +2483,7 @@
        "' Minecraft'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2495,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "33848a08",
    "metadata": {},
    "outputs": [
@@ -2505,7 +2505,7 @@
        "'Sandbox'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2517,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "6413e63e",
    "metadata": {},
    "outputs": [
@@ -2527,7 +2527,7 @@
        "'2009'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2539,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "8d44ffe6",
    "metadata": {},
    "outputs": [
@@ -2549,7 +2549,7 @@
        "'PC,  Xbox 360  PlayStation 3, Various'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2561,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "9bb5eda0",
    "metadata": {},
    "outputs": [
@@ -2571,7 +2571,7 @@
        "'238'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2583,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "ccf7a5a2",
    "metadata": {},
    "outputs": [],
@@ -2608,7 +2608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "acd933e4",
    "metadata": {},
    "outputs": [
@@ -2646,7 +2646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "7c688d34",
    "metadata": {},
    "outputs": [
@@ -3138,7 +3138,7 @@
        "49                  15.7  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3150,7 +3150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "3ed6cabe",
    "metadata": {},
    "outputs": [
@@ -3160,7 +3160,7 @@
        "99"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3171,7 +3171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "id": "7ec94b3b",
    "metadata": {},
    "outputs": [
@@ -3672,7 +3672,7 @@
        "50                    15  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3686,8 +3686,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "c5a4a318",
+   "execution_count": 63,
+   "id": "46653f34",
    "metadata": {},
    "outputs": [
     {
@@ -3696,7 +3696,7 @@
        "51"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3707,7 +3707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "id": "230e4e07",
    "metadata": {},
    "outputs": [],
@@ -3717,7 +3717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "id": "da8caee6",
    "metadata": {},
    "outputs": [
@@ -3745,7 +3745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "id": "63807305",
    "metadata": {},
    "outputs": [
@@ -3770,13 +3770,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-30-5609a5961289>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-66-5609a5961289>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_clean['Units Sold (millions)'] = pd.to_numeric(df_clean[\"Units Sold (millions)\"])\n",
-      "<ipython-input-30-5609a5961289>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-66-5609a5961289>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3793,7 +3793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "id": "c3ecad2d",
    "metadata": {},
    "outputs": [
@@ -4294,7 +4294,7 @@
        "50                 15.000  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4305,15 +4305,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "4ffab6d1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Game', 'Genre', 'Year Released', 'Units Sold (millions)'], dtype='object')"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean.columns"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
+   "id": "7d8d973f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 51 entries, 0 to 50\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Game                   51 non-null     object \n",
+      " 1   Genre                  51 non-null     object \n",
+      " 2   Year Released          51 non-null     int64  \n",
+      " 3   Units Sold (millions)  51 non-null     float64\n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 1.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "88be3e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean.rename(columns={'Game': 'game', 'Genre': 'genre', 'Year Released': 'year_released', 'Units Sold (millions)': 'units_sold_millions'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "d476877f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['game', 'genre', 'year_released', 'units_sold_millions'], dtype='object')"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "id": "563407e5",
    "metadata": {},
    "outputs": [],
