--- a/P2/Kaggle-csv.ipynb
+++ b/P2/Kaggle-csv.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0dfa2d45",
+   "id": "500136e4",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c4c220ae",
+   "id": "f30a5418",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0f2b4fa5",
+   "id": "9f2e4ac2",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "29af5d0b",
+   "id": "b31a2aba",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "34ae1b37",
+   "id": "cb283697",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "616fc3b1",
+   "id": "d2012a86",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a5e8fac1",
+   "id": "777fdf56",
    "metadata": {},
    "outputs": [
     {
@@ -379,18 +379,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "a8d3f7e8",
+   "execution_count": 59,
+   "id": "5569ef75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 11265 entries, 0 to 12253\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   name          11265 non-null  object\n",
+      " 1   platform      11265 non-null  object\n",
+      " 2   release_date  11265 non-null  object\n",
+      " 3   meta_score    11265 non-null  int64 \n",
+      " 4   user_review   11265 non-null  object\n",
+      "dtypes: int64(1), object(4)\n",
+      "memory usage: 528.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#df5.loc[df5['user_review']=='tbd']\n",
+    "df9 = df5[df5.user_review != 'tbd']\n",
+    "df9.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "fea57aec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df5.to_csv(\"kaggle_games_cleaner.csv\", index=False)"
+    "df9.to_csv(\"kaggle_games_cleaner.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d875958",
+   "id": "0d9957b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -398,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5427f41",
+   "id": "bf360034",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -406,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29397aa6",
+   "id": "6de582ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -414,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "80607a49",
+   "id": "a0fbd606",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b87dedf9",
+   "id": "f1b22610",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0e0ab17e",
+   "id": "21a433a3",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "993af3e7",
+   "id": "fa7206c1",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "d95b28dd",
+   "id": "9ef5863d",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "73180553",
+   "id": "1d6adaf3",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "546fa25f",
+   "id": "95db97c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b168a3a3",
+   "id": "c6527ad7",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "da5a7d50",
+   "id": "9d5bf0d6",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3e5606a3",
+   "id": "828d970f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3031de6c",
+   "id": "0b629d12",
    "metadata": {},
    "outputs": [],
    "source": []
