Update VG sales extraction.ipynb

--- a/VG sales extraction.ipynb
+++ b/VG sales extraction.ipynb
@@ -949,16 +949,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rename(columns = {'Title':'title','Genre':'genre', 'Platform(s)':'platform'}, inplace = True)"
+    "df.rename(columns = {'Title':'title','Genre':'genre', 'Platform(s)':'platform', 'release_year':'release_date', 'Sales(million units)': 'units_sold'}, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -983,10 +983,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>title</th>\n",
-       "      <th>Release year</th>\n",
+       "      <th>release_date</th>\n",
        "      <th>genre</th>\n",
        "      <th>platform</th>\n",
-       "      <th>Sales(million units)</th>\n",
+       "      <th>units_sold</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1035,22 +1035,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                           title  Release year             genre  \\\n",
+       "                           title  release_date             genre  \\\n",
        "0                      Minecraft          2009           Sandbox   \n",
        "1             Grand Theft Auto V          2013  Action Adventure   \n",
        "2                     Wii Sports          2006            Sports   \n",
        "3              Super Mario Bros.          1985        Platformer   \n",
        "4  Pokémon Red/Green/Blue/Yellow          1996               RPG   \n",
        "\n",
-       "                                            platform  Sales(million units)  \n",
-       "0                PC, Xbox 360 PlayStation 3, Various                238.00  \n",
-       "1  PC, PlayStation 3, PlayStation 4, Xbox 360, Xb...                135.00  \n",
-       "2                                                Wii                 82.90  \n",
-       "3                                       NES, Various                 63.33  \n",
-       "4        Game Boy, Game Boy Advance, Virtual Console                 59.52  "
+       "                                            platform  units_sold  \n",
+       "0                PC, Xbox 360 PlayStation 3, Various      238.00  \n",
+       "1  PC, PlayStation 3, PlayStation 4, Xbox 360, Xb...      135.00  \n",
+       "2                                                Wii       82.90  \n",
+       "3                                       NES, Various       63.33  \n",
+       "4        Game Boy, Game Boy Advance, Virtual Console       59.52  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>title</th>\n",
-       "      <th>Sales(million units)</th>\n",
+       "      <th>units_sold</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1359,61 +1359,61 @@
        "</div>"
       ],
       "text/plain": [
-       "                             title  Sales(million units)\n",
-       "0                        Minecraft               238.000\n",
-       "1               Grand Theft Auto V               135.000\n",
-       "2                       Wii Sports                82.900\n",
-       "3                Super Mario Bros.                63.330\n",
-       "4    Pokémon Red/Green/Blue/Yellow                59.520\n",
-       "5    PlayerUnknown's Battlegrounds                70.000\n",
-       "6               Sonic the Hedgehog                44.146\n",
-       "7                          Wii Fit                43.800\n",
-       "8      Pokémon Gold/Silver/Crystal                42.210\n",
-       "9              Super Mario Bros. 3                39.520\n",
-       "10             Super Mario Bros. 2                38.390\n",
-       "11                  Mario Kart Wii                37.100\n",
-       "12   Pokémon Ruby/Sapphire/Emerald                36.600\n",
-       "13               Super Mario World                34.183\n",
-       "14               Wii Sports Resort                33.080\n",
-       "15           New Super Mario Bros.                30.800\n",
-       "16       New Super Mario Bros. Wii                30.200\n",
-       "17                       Duck Hunt                28.310\n",
-       "18                        Wii Play                28.020\n",
-       "19   Grand Theft Auto: San Andreas                27.500\n",
-       "20  Call of Duty: Modern Warfare 3                26.500\n",
-       "21  Pokémon Diamond/Pearl/Platinum                25.270\n",
-       "22             Grand Theft Auto IV                25.000\n",
-       "23         Call of Duty: Black Ops                25.000\n",
-       "24               Kinect Adventures                24.000\n",
-       "25      Call of Duty: Black Ops II                24.000\n",
-       "26                         FIFA 18                24.000\n",
-       "27                      Nintendogs                23.960\n",
-       "28            Pokémon Sun and Moon                23.610\n",
-       "29                   Mario Kart DS                23.600\n",
-       "30                  Super Mario 64                23.240\n",
-       "31  Call of Duty: Modern Warfare 2                22.000\n",
-       "32               Street Fighter II                20.780\n",
-       "33              Call of Duty: WWII                20.620\n",
-       "34                    Mario Kart 8                20.160\n",
-       "35                         Frogger                20.000\n",
-       "36                        Terraria                20.000\n",
-       "37                      The Sims 2                20.000\n",
-       "38     The Elder Scrolls V: Skyrim                20.000\n",
-       "39                       Brain Age                19.010\n",
-       "40            Call of Duty: Ghosts                19.000\n",
-       "41                Super Mario Land                18.371\n",
-       "42     Grand Theft Auto: Vice City                17.500\n",
-       "43          Gran Turismo 3: A-Spec                16.450\n",
-       "44                 Pokémon X and Y                16.290\n",
-       "45                  Gran Turismo 5                16.010\n",
-       "46                        The Sims                16.000\n",
-       "47  Call of Duty 4: Modern Warfare                15.700\n",
-       "48      Call of Duty: World at War                15.700\n",
-       "49         Pokémon Black and White                15.640\n",
-       "50                      Diablo III                15.000"
+       "                             title  units_sold\n",
+       "0                        Minecraft     238.000\n",
+       "1               Grand Theft Auto V     135.000\n",
+       "2                       Wii Sports      82.900\n",
+       "3                Super Mario Bros.      63.330\n",
+       "4    Pokémon Red/Green/Blue/Yellow      59.520\n",
+       "5    PlayerUnknown's Battlegrounds      70.000\n",
+       "6               Sonic the Hedgehog      44.146\n",
+       "7                          Wii Fit      43.800\n",
+       "8      Pokémon Gold/Silver/Crystal      42.210\n",
+       "9              Super Mario Bros. 3      39.520\n",
+       "10             Super Mario Bros. 2      38.390\n",
+       "11                  Mario Kart Wii      37.100\n",
+       "12   Pokémon Ruby/Sapphire/Emerald      36.600\n",
+       "13               Super Mario World      34.183\n",
+       "14               Wii Sports Resort      33.080\n",
+       "15           New Super Mario Bros.      30.800\n",
+       "16       New Super Mario Bros. Wii      30.200\n",
+       "17                       Duck Hunt      28.310\n",
+       "18                        Wii Play      28.020\n",
+       "19   Grand Theft Auto: San Andreas      27.500\n",
+       "20  Call of Duty: Modern Warfare 3      26.500\n",
+       "21  Pokémon Diamond/Pearl/Platinum      25.270\n",
+       "22             Grand Theft Auto IV      25.000\n",
+       "23         Call of Duty: Black Ops      25.000\n",
+       "24               Kinect Adventures      24.000\n",
+       "25      Call of Duty: Black Ops II      24.000\n",
+       "26                         FIFA 18      24.000\n",
+       "27                      Nintendogs      23.960\n",
+       "28            Pokémon Sun and Moon      23.610\n",
+       "29                   Mario Kart DS      23.600\n",
+       "30                  Super Mario 64      23.240\n",
+       "31  Call of Duty: Modern Warfare 2      22.000\n",
+       "32               Street Fighter II      20.780\n",
+       "33              Call of Duty: WWII      20.620\n",
+       "34                    Mario Kart 8      20.160\n",
+       "35                         Frogger      20.000\n",
+       "36                        Terraria      20.000\n",
+       "37                      The Sims 2      20.000\n",
+       "38     The Elder Scrolls V: Skyrim      20.000\n",
+       "39                       Brain Age      19.010\n",
+       "40            Call of Duty: Ghosts      19.000\n",
+       "41                Super Mario Land      18.371\n",
+       "42     Grand Theft Auto: Vice City      17.500\n",
+       "43          Gran Turismo 3: A-Spec      16.450\n",
+       "44                 Pokémon X and Y      16.290\n",
+       "45                  Gran Turismo 5      16.010\n",
+       "46                        The Sims      16.000\n",
+       "47  Call of Duty 4: Modern Warfare      15.700\n",
+       "48      Call of Duty: World at War      15.700\n",
+       "49         Pokémon Black and White      15.640\n",
+       "50                      Diablo III      15.000"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1481,10 +1481,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>title</th>\n",
-       "      <th>Release year</th>\n",
+       "      <th>release_date</th>\n",
        "      <th>genre</th>\n",
        "      <th>platform</th>\n",
-       "      <th>Sales(million units)</th>\n",
+       "      <th>units_sold</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1757,7 +1757,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                             title  Release year             genre  \\\n",
+       "                             title  release_date             genre  \\\n",
        "6               Sonic the Hedgehog          1991        Platformer   \n",
        "8      Pokémon Gold/Silver/Crystal          1999               RPG   \n",
        "9              Super Mario Bros. 3          1988        Platformer   \n",
@@ -1792,43 +1792,43 @@
        "49         Pokémon Black and White          2010               RPG   \n",
        "50                      Diablo III          2012               RPG   \n",
        "\n",
-       "                                             platform  Sales(million units)  \n",
-       "6                  Mega Drive, Master System, Various                44.146  \n",
-       "8                         Game Boy Color, Nintendo DS                42.210  \n",
-       "9                                        NES, Various                39.520  \n",
-       "10                                  FDS, NES, Various                38.390  \n",
-       "12                                           GBA, 3DS                36.600  \n",
-       "13                                 Super NES, Various                34.183  \n",
-       "14                                                Wii                33.080  \n",
-       "15                                        Nintendo DS                30.800  \n",
-       "16                                                Wii                30.200  \n",
-       "19  PC, PlayStation 2, PlayStation 3 (PSN), Xbox, ...                27.500  \n",
-       "21                                        Nintendo DS                25.270  \n",
-       "22                        PC, PlayStation 3, Xbox 360                25.000  \n",
-       "23      PC, PlayStation 3, Xbox 360, Wii, Nintendo DS                25.000  \n",
-       "24                                           Xbox 360                24.000  \n",
-       "25                        PC, PlayStation 3, Xbox 360                24.000  \n",
-       "26  PC, PlayStation 3, PlayStation 4, Xbox 360, Xb...                24.000  \n",
-       "28                                       Nintendo 3DS                23.610  \n",
-       "29                                        Nintendo DS                23.600  \n",
-       "30                                   N64, Nintendo DS                23.240  \n",
-       "31                        PC, Xbox 360, PlayStation 3                22.000  \n",
-       "33                        PC, PlayStation 4, Xbox One                20.620  \n",
-       "34                                      Wii U, Switch                20.160  \n",
-       "36                                        PC, Various                20.000  \n",
-       "37                                        PC, Various                20.000  \n",
-       "40  PC, Xbox 360, Xbox One, PlayStation 3, PlaySta...                19.000  \n",
-       "41                           Game Boy, Game Boy Color                18.371  \n",
-       "42                            PC, Playstation 2, Xbox                17.500  \n",
-       "44                                       Nintendo 3DS                16.290  \n",
-       "45                                      Playstation 3                16.010  \n",
-       "47         PC, Xbox 360, Mac OS X, PlayStation 3, Wii                15.700  \n",
-       "48                   PC, Xbox 360, PlayStation 3, Wii                15.700  \n",
-       "49                                        Nintendo DS                15.640  \n",
-       "50              PC, Mac OS X, Xbox 360, PlayStation 3                15.000  "
+       "                                             platform  units_sold  \n",
+       "6                  Mega Drive, Master System, Various      44.146  \n",
+       "8                         Game Boy Color, Nintendo DS      42.210  \n",
+       "9                                        NES, Various      39.520  \n",
+       "10                                  FDS, NES, Various      38.390  \n",
+       "12                                           GBA, 3DS      36.600  \n",
+       "13                                 Super NES, Various      34.183  \n",
+       "14                                                Wii      33.080  \n",
+       "15                                        Nintendo DS      30.800  \n",
+       "16                                                Wii      30.200  \n",
+       "19  PC, PlayStation 2, PlayStation 3 (PSN), Xbox, ...      27.500  \n",
+       "21                                        Nintendo DS      25.270  \n",
+       "22                        PC, PlayStation 3, Xbox 360      25.000  \n",
+       "23      PC, PlayStation 3, Xbox 360, Wii, Nintendo DS      25.000  \n",
+       "24                                           Xbox 360      24.000  \n",
+       "25                        PC, PlayStation 3, Xbox 360      24.000  \n",
+       "26  PC, PlayStation 3, PlayStation 4, Xbox 360, Xb...      24.000  \n",
+       "28                                       Nintendo 3DS      23.610  \n",
+       "29                                        Nintendo DS      23.600  \n",
+       "30                                   N64, Nintendo DS      23.240  \n",
+       "31                        PC, Xbox 360, PlayStation 3      22.000  \n",
+       "33                        PC, PlayStation 4, Xbox One      20.620  \n",
+       "34                                      Wii U, Switch      20.160  \n",
+       "36                                        PC, Various      20.000  \n",
+       "37                                        PC, Various      20.000  \n",
+       "40  PC, Xbox 360, Xbox One, PlayStation 3, PlaySta...      19.000  \n",
+       "41                           Game Boy, Game Boy Color      18.371  \n",
+       "42                            PC, Playstation 2, Xbox      17.500  \n",
+       "44                                       Nintendo 3DS      16.290  \n",
+       "45                                      Playstation 3      16.010  \n",
+       "47         PC, Xbox 360, Mac OS X, PlayStation 3, Wii      15.700  \n",
+       "48                   PC, Xbox 360, PlayStation 3, Wii      15.700  \n",
+       "49                                        Nintendo DS      15.640  \n",
+       "50              PC, Mac OS X, Xbox 360, PlayStation 3      15.000  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1851,7 @@
        "       'Racing Sim', 'Life Sim'], dtype=object)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +1989,7 @@
        "17          Life Sim"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
