Update VG sales extraction.ipynb

--- a/VG sales extraction.ipynb
+++ b/VG sales extraction.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -63,7 +63,7 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -99,7 +99,7 @@
        "list"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -782,7 +782,7 @@
        "50      [41][42]  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
        "4        Game Boy, Game Boy Advance, Virtual Console                 59.52  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,16 +949,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rename(columns = {'Title':'title','Genre':'genre', 'Platform(s)':'platform', 'release_year':'release_date', 'Sales(million units)': 'units_sold'}, inplace = True)"
+    "df.rename(columns = {'Title':'title','Genre':'genre', 'Platform(s)':'platform', 'Release year':'release_date', 'Sales(million units)': 'units_sold'}, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>title</th>\n",
-       "      <th>release_date</th>\n",
+       "      <th>Release year</th>\n",
        "      <th>genre</th>\n",
        "      <th>platform</th>\n",
        "      <th>units_sold</th>\n",
@@ -1035,7 +1035,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                           title  release_date             genre  \\\n",
+       "                           title  Release year             genre  \\\n",
        "0                      Minecraft          2009           Sandbox   \n",
        "1             Grand Theft Auto V          2013  Action Adventure   \n",
        "2                     Wii Sports          2006            Sports   \n",
@@ -1050,7 +1050,7 @@
        "4        Game Boy, Game Boy Advance, Virtual Console       59.52  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
        "50                      Diablo III      15.000"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>title</th>\n",
-       "      <th>release_date</th>\n",
+       "      <th>Release year</th>\n",
        "      <th>genre</th>\n",
        "      <th>platform</th>\n",
        "      <th>units_sold</th>\n",
@@ -1757,7 +1757,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                             title  release_date             genre  \\\n",
+       "                             title  Release year             genre  \\\n",
        "6               Sonic the Hedgehog          1991        Platformer   \n",
        "8      Pokémon Gold/Silver/Crystal          1999               RPG   \n",
        "9              Super Mario Bros. 3          1988        Platformer   \n",
@@ -1828,7 +1828,7 @@
        "50              PC, Mac OS X, Xbox 360, PlayStation 3      15.000  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1851,7 @@
        "       'Racing Sim', 'Life Sim'], dtype=object)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +1989,7 @@
        "17          Life Sim"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
